== In Git

=== Bugfixes
* RbStepDefinition#invoke calls #backtrace_line on self rather than @proc (#503 Mike Sassak)
* Avoid duplicate cucumber entries in database.yml (Daniel Hofstetter)

=== Changed Features
* Examples keyword without a colon is deprecated loudly. Gherkin will not recognize it at all. (Gherkin #30 Mike Sassak)

== 0.4.3 2009-10-28

The exciting thing about this release is that the wire protocol is starting to take shape. This means you can
now use Cucumber with .NET - writing step definitions in C#. And this is without having to use IronRuby at all!
See Cuke4Nuke (http://wiki.github.com/richardlawrence/Cuke4Nuke) for more information.

As usual there are several small features and bug fixes.

=== New Features
* Add support for ORing tags which are passed in with seperate --tag arguments. Make comma seperated tags use AND (#368 Joseph Wilk)
* New Wire Protocol - allowing out of process execution of Cucumber scenarios. (#428 Matt Wynne)
* Added an example illustrating how to get screenshots in HTML reports (examples/watir) (Aslak Hellesøy)
* Added new #embed(file, mime_type) method to visitors and Ruby Worlds to make it easier to embed screenshots (Aslak Hellesøy)
* The #announce method available from Ruby Step Definitions will print *after* the step is executed. (#487 Zoltan Penzeli)
* Add support for rolling back transaction for all open database connections. (John Ferlito)
* Show scenario and step summary in HTML formatter (#285 Joseph Wilk)
* Ast::Table can now be constructed with an Array of Hash. (Aslak Hellesøy)

=== Changed features
* The #announce method will no longer escape HTML if the html formatter is used. Escaping must be done manually. (Aslak Hellesøy)

=== Bugfixes
* Fixed incorrect rendering of step arguments with UTF8 characters (Aslak Hellesøy)
* "--format rerun", with a Scenario Outline, kills cucumber (#492 Aslak Hellesøy)
* Usage formatter is not reporting time correctly. (Elliot Crosby-McCullough)