@@ -23,7 +23,7 @@ module Cucumber
       end
 
       def accept(visitor)
-        return if $cucumber_interrupted
+        return if Cucumber.wants_to_quit
         visitor.visit_comment(@comment) unless @comment.empty?
         visitor.visit_background_name(@keyword, @name, file_colon_line(@line), source_indent(first_line_length))
         with_visitor(hook_context, visitor) do
