@@ -6,7 +6,7 @@ module Cucumber
       end
 
       def accept(visitor)
-        return if $cucumber_interrupted
+        return if Cucumber.wants_to_quit
         visitor.visit_comment(@comment) unless @comment.empty?
         visitor.visit_examples_name(@keyword, @name)
         visitor.visit_outline_table(@outline_table)
