@@ -23,7 +23,7 @@ module Cucumber
       end
 
       def accept(visitor)
-        return if $cucumber_interrupted
+        return if Cucumber.wants_to_quit
         start = Time.now
         self.each do |feature|
           visitor.visit_feature(feature)
