@@ -5,7 +5,7 @@ module Cucumber
 
       module ExamplesArray #:nodoc:
         def accept(visitor)
-          return if $cucumber_interrupted
+          return if Cucumber.wants_to_quit
           each do |examples|
             visitor.visit_examples(examples)
           end
@@ -39,7 +39,7 @@ module Cucumber
       end
 
       def accept(visitor)
-        return if $cucumber_interrupted
+        return if Cucumber.wants_to_quit
         visitor.visit_comment(@comment) unless @comment.empty?
         visitor.visit_tags(@tags)
         visitor.visit_scenario_name(@keyword, @name, file_colon_line(@line), source_indent(first_line_length))
