@@ -87,7 +87,7 @@ module Cucumber
       end
 
       def accept(visitor)
-        return if $cucumber_interrupted
+        return if Cucumber.wants_to_quit
         @tag_names.each do |tag_name|
           visitor.visit_tag_name(tag_name)
         end
