@@ -29,6 +29,7 @@ module Cucumber
         @args         = args
         @out_stream   = out_stream == STDOUT ? Formatter::ColorIO.new : out_stream
         @error_stream = error_stream
+        @configuration = nil
       end
 
       def execute!(step_mother)
@@ -110,8 +111,8 @@ module Cucumber
 
       def trap_interrupt
         trap('INT') do
-          exit!(1) if $cucumber_interrupted
-          $cucumber_interrupted = true
+          exit!(1) if Cucumber.wants_to_quit
+          Cucumber.wants_to_quit = true
           STDERR.puts "\nExiting... Interrupt again to exit immediately."
         end
       end
