@@ -18,6 +18,7 @@ module Cucumber
         raise "Language not supported: #{lang.inspect}" if @keywords.nil?
         @keywords['grammar_name'] = @keywords['name'].gsub(/\s/, '')
         register_adverbs(step_mother) if step_mother
+        @parser = nil
       end
 
       def register_adverbs(step_mother)
